<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">navigaTe</string>
    <string name="hello_world">Hello world!</string>
    <string name="check_schedule">Check Schedule</string>
    <string name="find_stop">Find Stop</string>
    <string name="get_directions">Get Directions</string>
    <string name="speak">Tap To Speak</string>
    <string name="bus">bus</string>
    <string name="subway">subway</string>
    <string name="title_activity_check_schedule">Choose Mode</string>
    <string name="title_activity_find_stop">Find Stop</string>
    <string name="title_activity_get_directions">Get Directions</string>
    <string name="title_activity_choose_bus_line">Choose Bus Line</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="forty_seven">47</string>
    <string name="sixty_six">66</string>
    <string name="seventy">70</string>
    <string name="seventy_a">70A</string>
    <string name="seventy_three">73</string>
    <string name="seventy_four">74</string>
    <string name="title_activity_choose_subway_line">Choose Subway Line</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="silver">Silver</string>
    <string name="title_activity_show_subway_schedule">Check Schedule</string>
    <string name="title_activity_show_schedule">Check Schedule</string>
    <string name="connection_error">Sorry, connection error.</string>
    <string name="xml_error">Sorry, XML error.</string>
    <string name="title_activity_speak">Speak</string>
    <string name="title_activity_map">Map</string>
    <string name="action_map">Show Map</string>
    <string name="title_activity_get_origin_destination">Get Directions</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="use_current_location">Use current location</string>
    <string name="empty"></string>

</resources>
